Fix display of image when set as circle in carousel block on mobile device.

--- a/includes/blocks/carousel/style.scss
+++ b/includes/blocks/carousel/style.scss
@@ -81,6 +81,10 @@
 
 				}
 
+				.cn-image-style {
+					display: block;
+				}
+
 				span.phone-number-block,
 				span.email-address-block {
 					display: block;
